fix: right alignment of card containers with respect to page body

--- a/styles.css
+++ b/styles.css
@@ -188,18 +188,20 @@ body {
   text-transform: capitalize;
   font-size: 22px;
   font-weight: 500;
+  margin: 1.5rem 0 0.5rem;
 }
 
 .movies-list {
-  width: 100%;
+  width: 94%;
   height: 220px;
   position: relative;
   margin: 10px 0 20px;
+  margin: auto;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 .card-container {
   position: absolute;
-  width: 92%;
-  padding-left: 10px;
+  width: 100%;
   height: 220px;
   display: flex;
   margin: 0, auto;
